piku/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  last-applied-configuration: 
  creationTimestamp: "2024-01-28T00:16:27Z"
  labels:
    kubernetes.io/metadata.name: piku
  name: piku
