piku/endpoint-talos.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: talos
  namespace: piku
subsets:
- addresses:
  - ip: 192.168.100.135
  ports:
    - port: 80
      name: http
