piku/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vm111
  namespace: piku
subsets:
- addresses:
  - ip: 192.168.100.111
  ports:
    - port: 80
      name: http
