piku/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piku-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
    # - port: 443
    #   protocol: TCP
    #   targetPort: 443
    #   name: https
