piku/ingress-blog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm111-ingress
  namespace: piku
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer
    traefik.ingress.kubernetes.io/router.middlewares: cert-manager-redirect@kubernetescrd

spec:
  tls:
  - hosts:
    - blog.drmatthew.org
    - drmatthew.org
    secretName: piku-blog-https
  rules:
    - host: blog.drmatthew.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name:  vm111
                port:
                  name: http
    - host: drmatthew.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name:  vm111
                port:
                  name: http
