piku/ingress-quotes-talos.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talos-endpoint
  namespace: piku
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer
    # traefik.ingress.kubernetes.io/router.middlewares: cert-manager-redirect@kubernetescrd

spec:
  tls:
  - hosts:
    - quotes.3756home.org
    secretName: talos-endpoint-https
  rules:
    - host: quotes.3756home.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name:  talos
                port:
                  name: http
