piku/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piku-service
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer

spec:
  tls:
  - hosts:
    - piku.k.3756home.org
    secretName: piku-https
  rules:
    - host: piku.k.3756home.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name:  piku-service
                port:
                  name: http
