piku/ingressrouteTCP.yaml
# taken from https://doc.traefik.io/traefik/routing/providers/kubernetes-crd/#kind-ingressroutetcp
# Example from Using Kubernetes ExternalName service
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: test.route
#   namespace: default

# spec:
#   entryPoints:
#     - foo

#   routes:
#   - match: HostSNI(`*`)
#     services:
#     - name: external-svc
#       port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: piku-service
spec:
  routes:
    - match: HostSNI(`piku.k.3756home.org`)
      services:
      - name: piku-service
        port: 80
      - name: piku-service
        port: 443
  tls:
    passthrough: true
